styles/style.css
*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: #141414;
  color: #ffffff;
  overflow-y: scroll;
}

img {
  display: block;
  max-width: 100%;
}

html {
  scroll-behavior: smooth;
}

@font-face {
  font-family: HelveticaLight;
  src: url(../fonts/HelveticaNeue-Light.otf);
  font-weight: 100;
}

@font-face {
  font-family: HelveticaReg;
  src: url(../fonts/HelveticaNeue.otf);
  font-weight: 400;
}

@font-face {
  font-family: HelveticaBold;
  src: url(../fonts/HelveticaNeue-Bold.otf);
  font-weight: 600;
}

h1, h2, h3 {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

p, a, li {
  font-family: HelveticaLight, Helvetica;
  font-size: max(15px, 1.9vh);
  color: #ffffff;
  line-height: 1.5;
}

@media only screen and (min-width: 1100px) {
  p, a, li {
    font-size: max(22px, 2.4vh);
  }
}

.page-title {
  font-family: HelveticaBold, Helvetica;
  font-size: max(40px, 6vh);
  text-transform: uppercase;
}

@media only screen and (min-width: 1100px) {
  .page-title {
    font-size: 9vh;
  }
}

.page-title--intro {
  display: block;
  text-transform: unset;
}

.page-title--lp {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.page-title--red {
  color: #E52025;
}

.page-title--blue {
  color: #3B82AD;
}

.section-title {
  font-family: HelveticaBold, Helvetica;
  font-size: max(29.5px, 3.4vh);
  text-transform: uppercase;
  letter-spacing: 1px;
}

@media only screen and (min-width: 1100px) {
  .section-title {
    font-size: 5.5vh;
  }
}

.section-title--lowCase {
  text-transform: unset;
}

.section-title--center {
  text-align: center;
}

.services-title {
  margin: 1.7vh;
  font-family: HelveticaReg, Helvetica;
  font-size: max(24px, 3vh);
  text-transform: uppercase;
  letter-spacing: 1px;
  z-index: 5;
}

@media only screen and (min-width: 1100px) {
  .services-title {
    font-size: 4vh;
  }
}

.gallery-title {
  font-family: HelveticaBold, Helvetica;
  font-size: max(24px, 3vh);
  text-transform: uppercase;
  letter-spacing: 1px;
  z-index: 5;
}

@media only screen and (min-width: 1100px) {
  .gallery-title {
    font-size: 4vh;
  }
}

.redi-claim {
  margin-top: 3.4vh;
  font-family: HelveticaBold, Helvetica;
  font-size: max(40px, 6vh);
  text-transform: uppercase;
  color: #E52025;
}

@media only screen and (min-width: 1100px) {
  .redi-claim {
    margin: 0;
    font-size: 9vh;
  }
}

.text {
  margin-top: 3.4vh;
  font-family: HelveticaLight, Helvetica;
  font-size: max(15px, 1.9vh);
  line-height: 1.5;
}

@media only screen and (min-width: 1100px) {
  .text {
    font-size: max(22px, 2.4vh);
    margin-top: 6vh;
  }
}

.text--center {
  text-align: center;
}

.text--gallery {
  margin-top: 0.425vh;
}

.text--map {
  display: inline-block;
  margin: 0.5rem;
  color: #E52025;
  text-transform: uppercase;
  border-bottom: solid 1px #E52025;
  -webkit-transition: ease-in-out 0.25s;
  transition: ease-in-out 0.25s;
  z-index: 100;
}

@media only screen and (min-width: 1100px) {
  .text--map {
    margin: 1rem;
  }
}

.text--map:hover {
  color: #ffffff;
  border-bottom: solid 1px #ffffff;
}

.redi-dot {
  top: -2px;
  color: #E52025;
}

.redi-dot--inv {
  color: #ffffff;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-fill-color: #adadad;
  box-shadow: 0 0 0px 1000px #141414 inset;
  -webkit-box-shadow: 0 0 0px 1000px #141414 inset;
  font-size: max(15px, 1.9vh);
}

@media only screen and (min-width: 1100px) {
  input:-webkit-autofill,
  input:-webkit-autofill:hover,
  input:-webkit-autofill:focus,
  textarea:-webkit-autofill,
  textarea:-webkit-autofill:hover,
  textarea:-webkit-autofill:focus,
  select:-webkit-autofill,
  select:-webkit-autofill:hover,
  select:-webkit-autofill:focus {
    font-size: max(22px, 2.4vh);
  }
}

.form__input, .form__textarea,
.form input, .form textarea {
  margin-top: 0.425vh;
  color: #adadad;
  font-family: HelveticaLight, Helvetica;
  font-size: max(15px, 1.9vh);
}

@media only screen and (min-width: 1100px) {
  .form__input, .form__textarea,
  .form input, .form textarea {
    font-size: max(22px, 2.4vh);
  }
}

.form__input::-webkit-input-placeholder, .form__textarea::-webkit-input-placeholder,
.form input::-webkit-input-placeholder, .form textarea::-webkit-input-placeholder {
  font-family: HelveticaLight, Helvetica;
  font-size: max(15px, 1.9vh);
  color: #adadad;
}

.form__input:-ms-input-placeholder, .form__textarea:-ms-input-placeholder,
.form input:-ms-input-placeholder, .form textarea:-ms-input-placeholder {
  font-family: HelveticaLight, Helvetica;
  font-size: max(15px, 1.9vh);
  color: #adadad;
}

.form__input::-ms-input-placeholder, .form__textarea::-ms-input-placeholder,
.form input::-ms-input-placeholder, .form textarea::-ms-input-placeholder {
  font-family: HelveticaLight, Helvetica;
  font-size: max(15px, 1.9vh);
  color: #adadad;
}

.form__input::placeholder, .form__textarea::placeholder,
.form input::placeholder, .form textarea::placeholder {
  font-family: HelveticaLight, Helvetica;
  font-size: max(15px, 1.9vh);
  color: #adadad;
}
/* ... */

